<?xml version="1.0" encoding="utf-8"?>
<!-- $Id$ -->
<resources>
    <string name="hello">Hello World, ArabicFlashcards!</string>
    <string name="app_name">Arabic flashcards</string>
    <string name="about_title">About</string>
    <string name="about_text">Written by Bryan J. Maupin</string>
    <string name="categories_title">Categories</string>
    <string name="choose_aws_chapter_title">Please select a chapter:</string>
    <string name="hello_michelle">مرحباً، يا ميشيل</string>
    <string name="hello_michelle2">\\u0645\\u0631\\u062d\\u0628\\u0627\\u064b\\u060c \\u064a\\u0627 \\u0645\\u064a\\u0634\\u064a\\u0644</string>
    <string name="menu_about_label">About</string>
    <string name="menu_about_shortcut">a</string>
    <string name="menu_exit_label">Exit</string>
    <string name="menu_exit_shortcut">x</string>
    <string name="menu_help_label">Help</string>
    <string name="menu_help_shortcut">h</string>
    <string name="menu_settings_label">Settings</string>
    <string name="menu_settings_shortcut">s</string>
    <string name="settings_title">Settings</string>
</resources>
