<?xml version="1.0" encoding="UTF-8"?>
<!-- $Id$ -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/menu_help"
		android:title="@string/menu_help_label"
		android:alphabeticShortcut="@string/menu_help_shortcut"
		android:icon="@android:drawable/ic_menu_help" />
	<item android:id="@+id/menu_about"
		android:title="@string/menu_about_label"
		android:alphabeticShortcut="@string/menu_about_shortcut"
		android:icon="@android:drawable/ic_menu_info_details" />
	<item android:id="@+id/menu_settings"
		android:title="@string/menu_settings_label"
		android:alphabeticShortcut="@string/menu_settings_shortcut"
		android:icon="@android:drawable/ic_menu_preferences" />
	<item android:id="@+id/menu_exit"
		android:title="@string/menu_exit_label"
		android:alphabeticShortcut="@string/menu_exit_shortcut"
		android:icon="@android:drawable/ic_menu_close_clear_cancel" />
</menu>
